# crudProjectAPI

./: 404.html  README.md  docker-compose.yml  hello.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
backend/: Dockerfile  crud.py  database.py  models.py  requirements.txt  router.py  schemas.py
docs/: crud.md  database.md  index.md  models.md  router.md  schemas.md
frontend/: Dockerfile  app.py
models/: index.html
schemas/: index.html
search/: search_index.json
site/: index.html
site/crud/: index.html
site/database/: index.html
site/router/: index.html
