[project]
name = "crudprojectapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "mkdocs-material>=9.5.39",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "pydantic[email]>=2.9.2",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.7",
    "sqlalchemy>=2.0.35",
    "streamlit>=1.38.0",
    "uvicorn>=0.30.6",
    "psycopg2-binary>=2.9.9",
]
